# mkdocs-test

./: README.md  index.html  pyproject.toml
another_page/: index.html
docs/: another_page.md
search/: search_index.json
