[tool.poetry]
name = "mkdocs-test"
version = "0.1.0"
description = ""
authors = ["Bas Kok <bakotaco@gmail.com>"]
readme = "README.md"
packages = [{include = "mkdocs_test"}]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
